# iwf-python-samples

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.githooks/: no-nexus.sh
ai-agent-email/: README.md  ai_agent_workflow.py  build-reliable-ai-gents-with-iwf-on-temporal.md  iwf_config.py  main.py  package-lock.json  package.json  tsconfig.json  webpack.config.js
ai-agent-email/src/: App.tsx
ai-agent-email/static/: test.html
ai-agent-email/static/js/: bundle.js
ai-agent-email/templates/: index.html
basic/: README.md  basic_workflow.py  iwf_config.py  main.py
moneytransfer/: README.md  iwf_config.py  main.py  money_transfer_workflow.py
patterns/timeout/: handle_timeout_workflow.py  iwf-config.py  main.py
resourcecontrol/: controller_workflow.py  iwf_config.py  main.py  processing_workflow.py
signup/: iwf_config.py  main.py  signup_workflow.py
workflows/: iwf_config.py  main.py  signup_workflow.py
